@@ -18,6 +18,8 @@ Import-Package: org.eclipse.cdt.debug.core,
  org.eclipse.debug.ui,
  org.eclipse.debug.ui.sourcelookup,
  org.eclipse.jface.text,
+ org.eclipse.linuxtools.internal.valgrind.launch,
+ org.eclipse.linuxtools.profiling.launch,
  org.eclipse.linuxtools.profiling.ui,
  org.eclipse.linuxtools.valgrind.launch,
  org.eclipse.linuxtools.valgrind.ui,
